src/test/ui/consts/const-eval/unwind-abort.stderr
error: any use of this value will cause an error
  --> $DIR/unwind-abort.rs:5:5
   |
LL |     panic!()
   |     ^^^^^^^^
   |     |
   |     the evaluated program panicked at 'explicit panic', $DIR/unwind-abort.rs:5:5
   |     inside `foo` at $SRC_DIR/std/src/panic.rs:LL:COL
   |     inside `_` at $DIR/unwind-abort.rs:9:15
...
LL | const _: () = foo();
   | --------------------
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

